blurry line fix

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -26,9 +26,6 @@ hr.drop
   margin-bottom: 100px  
   
 .opener p
-  background: linear-gradient(to right, #fff0fe 0%, #f2ffff 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   text-align: center
   
 .bigscreen .gallery
